@@ -32,6 +32,7 @@ button {
 
 button:hover {
     border-color: rgb(78, 124, 255);
+    cursor: pointer;
 }
 
 .overlay {
@@ -57,7 +58,7 @@ button:hover {
     border-radius: 12px;
 }
 
-.modal div {
+.modal-inner {
     background-color: rgb(62, 52, 125);
     padding: 16px;
     border-radius: 12px;
@@ -67,7 +68,7 @@ button:hover {
     margin-bottom: 16px;
 }
 
-.modal div button {
+.modal div button{
     background-color: rgb(62, 52, 125);
     margin-left: 8px;
 }
@@ -106,4 +107,32 @@ button:hover {
     font-weight: 600; 
     margin: 0px; 
     line-height: 1.5;
+}
+
+.input-file {
+    display: none;
+}
+
+.input-json-button {
+    height: 38px;
+}
+
+.import-result {
+    border-radius: 12px;
+    border-style: none;
+    text-align: center;
+    padding: 16px;
+    margin-top: 8px;
+    display: none;
+}
+
+.success {
+    background-color: rgb(0, 255, 0);
+    color: black;
+    display: block;
+}
+
+.failure {
+    background-color: rgb(252, 129, 129);
+    display: block;
 }
