@@ -1,3 +1,10 @@
+2023/01/03
+- Added export/import data
+
+2023/01/02
+- Changed summon history data structure
+- Added 50/50 win rate for 5*s
+
 2023/12/31
 - Fleshed out Settings page
 
